@@ -4,12 +4,11 @@ import com.github.fppt.jedismock.comparisontests.ComparisonBase;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.testcontainers.shaded.com.google.common.collect.ImmutableMap;
 import redis.clients.jedis.Jedis;
 import redis.clients.jedis.StreamEntryID;
 import redis.clients.jedis.exceptions.JedisDataException;
 import redis.clients.jedis.params.XAddParams;
-
-import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -25,17 +24,17 @@ public class XAddTests {
         jedis.xadd(
             "s",
             XAddParams.xAddParams().noMkStream().approximateTrimming().maxLen(3).limit(3).id(1),
-            Map.of("a", "b")
+            ImmutableMap.of("a", "b")
         );
 
         assertFalse(jedis.exists("s"));
 
-        jedis.xadd("s", XAddParams.xAddParams().id(1), Map.of("a", "b"));
+        jedis.xadd("s", XAddParams.xAddParams().id(1), ImmutableMap.of("a", "b"));
 
         jedis.xadd(
                 "s",
                 XAddParams.xAddParams().noMkStream().approximateTrimming().minId("0-0").limit(3).id(2),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         );
 
         assertTrue(jedis.exists("s"));
@@ -47,17 +46,17 @@ public class XAddTests {
         jedis.xadd(
                 "s",
                 XAddParams.xAddParams().noMkStream().approximateTrimming().maxLen(3).limit(3).id(1),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         );
 
         assertFalse(jedis.exists("s"));
 
-        jedis.xadd("s", XAddParams.xAddParams().id(1), Map.of("a", "b"));
+        jedis.xadd("s", XAddParams.xAddParams().id(1), ImmutableMap.of("a", "b"));
 
         jedis.xadd(
                 "s",
                 XAddParams.xAddParams().noMkStream().approximateTrimming().minId("0-0").limit(3).id(2),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         );
 
         assertTrue(jedis.exists("s"));
@@ -66,15 +65,15 @@ public class XAddTests {
 
     @TestTemplate
     void whenLimitIsProvided_ensureDoesNotExceed(Jedis jedis) {
-        jedis.xadd("s", new StreamEntryID(0, 1), Map.of("a", "b"));
-        jedis.xadd("s", new StreamEntryID(0, 2), Map.of("a", "b"));
-        jedis.xadd("s", new StreamEntryID(1, 0), Map.of("a", "b"));
-        jedis.xadd("s", new StreamEntryID(1, 1), Map.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(0, 1), ImmutableMap.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(0, 2), ImmutableMap.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(1, 0), ImmutableMap.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(1, 1), ImmutableMap.of("a", "b"));
 
         jedis.xadd(
                 "s",
                 XAddParams.xAddParams().approximateTrimming().minId("2").limit(2),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         );
 
         long len = jedis.xlen("s");
@@ -86,15 +85,15 @@ public class XAddTests {
 
     @TestTemplate
     void whenAddedIdIsLowerThanMinId_ensureStreamIsEmpty(Jedis jedis) {
-        jedis.xadd("s", new StreamEntryID(0, 1), Map.of("a", "b"));
-        jedis.xadd("s", new StreamEntryID(0, 2), Map.of("a", "b"));
-        jedis.xadd("s", new StreamEntryID(1, 0), Map.of("a", "b"));
-        jedis.xadd("s", new StreamEntryID(1, 1), Map.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(0, 1), ImmutableMap.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(0, 2), ImmutableMap.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(1, 0), ImmutableMap.of("a", "b"));
+        jedis.xadd("s", new StreamEntryID(1, 1), ImmutableMap.of("a", "b"));
 
         jedis.xadd(
                 "s",
                 XAddParams.xAddParams().exactTrimming().minId("2").id("1-2"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         );
 
         assertEquals(0, jedis.xlen("s"));
@@ -105,55 +104,55 @@ public class XAddTests {
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().minId("1").noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().maxLen(1).noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().minId("1").exactTrimming().noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().maxLen(1).exactTrimming().noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().maxLen(1).approximateTrimming().noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().minId("1").approximateTrimming().noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().minId("1").approximateTrimming().limit(3).noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
 
         assertNull(jedis.xadd(
                 "s",
                 XAddParams.xAddParams().maxLen(1).approximateTrimming().limit(3).noMkStream().id("*"),
-                Map.of("a", "b")
+                ImmutableMap.of("a", "b")
         ));
     }
 
@@ -161,7 +160,7 @@ public class XAddTests {
     void whenZeroId_ensureThrowsException(Jedis jedis) {
         assertThrows(
                 JedisDataException.class,
-                () -> jedis.xadd("s", XAddParams.xAddParams().id("0"), Map.of("a", "b")),
+                () -> jedis.xadd("s", XAddParams.xAddParams().id("0"), ImmutableMap.of("a", "b")),
                 "ERR The ID specified in XADD is equal or smaller than the target stream top item"
         );
     }
